---------------------------------------------------------------------------------------------------
Version: 1.0.12
Date: ????
  Bugfixes:
    - Fixed a number/string coercion in number formatting
    - Fixed typos in strings - Thanks fournm.
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 2022-06-10
  Changes:
    - Sort and remove uneeded signals on combinator closing. (Already done on open).
    - If the "Requester" checkbox is checked, values for Item and Fluids will be converted
      to negatives.
    - Default Network ID will explicitly be set on new combinators if "Explicit default Network ID"
      setting is enabled. Explicit NetID can be removed by selecting "None" in the config dialog.
      This will revert to following the LTN configured default implicilty.
        Note: If the LTN default network is changed, explicily set combinators will not change
              automatically.
    - Newly built Requester LTN Combinators from blueprints or copy / cut / paste operations will be
      set to disabled by default.
    - Remove some dead code
  Features:
    - Add setting to keep default Network ID if explicitly set.
    - Add runtime setting to control which newly built LTN Combinators are disabled at build time.
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2022-1-8
  Bugfixes:
    - Fix a crash in network id encoding pane when cliking Net IDs if the value in the text field
      is not a valid number.
  Features:
    - Setting to make all placed LTN Combinators disabled as they are placed.
      Thanks Nico for the contribution.
  Changes:
    - Display the encoded netowrk ID on the main panel.
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2021-11-17
  Bugfixes:
    - Fixed a few missing strings from localization.